[package]
name = "rust-fsm"
description = "A framework for building finite state machines in Rust"
repository = "https://github.com/eugene-babichenko/rust-fsm"
homepage = "https://github.com/eugene-babichenko/rust-fsm"
documentation = "https://docs.rs/rust-fsm/"
readme = "README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm"]
version = "0.4.0"
authors = ["Yevhenii Babichenko"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
rust-fsm-dsl = { path = "./rust_fsm_dsl", version = "0.4.0" }

[profile.dev]
panic = "abort"

[workspace]
members = [".", "rust_fsm_dsl", "ensure_no_std"]
