[package]
name = "rust-fsm-dsl"
description = "Macros for rust-fsm DSL"
repository = "https://github.com/eugene-babichenko/rust-fsm"
homepage = "https://github.com/eugene-babichenko/rust-fsm"
documentation = "https://docs.rs/rust-fsm-dsl/"
readme = "../README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm"]
version = "0.7.0"
authors = ["Yevhenii Babichenko"]
edition = "2021"

[lib]
proc-macro = true

[features]
diagram = []

[dependencies]
proc-macro2 = "1"
syn = "2"
quote = "1"
