[package]
name = "rust-fsm"
description = "A framework and a DSL for building finite state machines in Rust"
repository = "https://github.com/eugene-babichenko/rust-fsm"
homepage = "https://github.com/eugene-babichenko/rust-fsm"
documentation = "https://docs.rs/rust-fsm/"
readme = "../README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm"]
version = "0.7.0"
authors = ["Yevhenii Babichenko"]
edition = "2021"

[features]
default = ["std", "dsl"]
std = []
dsl = ["rust-fsm-dsl"]
diagram = ["aquamarine", "rust-fsm-dsl/diagram"]

[dependencies]
aquamarine = { version = "0.5", optional = true }
rust-fsm-dsl = { path = "../rust-fsm-dsl", version = "0.7.0", optional = true }

[profile.dev]
panic = "abort"
