[package]
name = "rust-fsm"
description = "A framework for building finite state machines in Rust"
repository = "https://github.com/eugene-babichenko/rust-fsm"
homepage = "https://github.com/eugene-babichenko/rust-fsm"
readme = "../README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm"]
version = "0.2.0"
authors = ["Yevhenii Babichenko"]
edition = "2018"

[badges]
travis-ci = { repository = "eugene-babichenko/rust-fsm" }

[dev-dependencies]
rust-fsm-dsl = { path = "../rust_fsm_dsl" }
